2003-01-26 19:33  huysmans

	* configure.ac, po/fi.gmo, po/fi.po: Add Finnish translations

2003-01-25 22:26  huysmans

	* panel/controls_dialog.c: Don't ask for removal confirmation for
	controls without popup menu

2003-01-25 19:30  huysmans

	* plugins/systembuttons/systembuttons.c: Add orientation to
	systembuttons

2003-01-25 14:14  huysmans

	* po/: de.gmo, de.po: Really add german translation

2003-01-25 14:12  huysmans

	* configure, configure.ac: Add german translation

2003-01-25 13:24  huysmans

	* ChangeLog, plugins/clock/clock.c, plugins/switcher/switcher.c,
	plugins/systembuttons/systembuttons.c: Hide popup for clock and
	systembuttons

2003-01-24 16:18  xfce

	* plugins/clock/Makefile.am, plugins/clock/Makefile.in,
	plugins/clock/clock.c, plugins/mailcheck/Makefile.am,
	plugins/mailcheck/Makefile.in, plugins/mailcheck/mailcheck.c,
	plugins/switcher/Makefile.am, plugins/switcher/Makefile.in,
	plugins/switcher/switcher.c, plugins/systembuttons/Makefile.am,
	plugins/systembuttons/Makefile.in,
	plugins/systembuttons/systembuttons.c, plugins/trash/Makefile.am,
	plugins/trash/Makefile.in, plugins/trash/trash.c,
	settings/xfce_settings_dialog.c: Fix a bunch of i18n problems:
	bindtextdomain must be invoked each time a plugin has to display
	something otherwise other bindtextdomains take precedence and
	display is not translated anymore...

2003-01-24 15:57  xfce

	* po/: es.gmo, es.po, fr.gmo, fr.po, nl.gmo, nl.po,
	xfce4-panel.pot: Fix encoding not specified in es.po, regenerate
	pot file (required after Edscott fixed a typo in the source) and
	adjust french translation.

2003-01-24 15:39  xfce

	* Makefile.in, aclocal.m4, config.h.in, configure, configure.ac,
	icons/Makefile.in, panel/Makefile.in, plugins/Makefile.in,
	plugins/clock/Makefile.in, plugins/mailcheck/Makefile.in,
	plugins/switcher/Makefile.in, plugins/systembuttons/Makefile.in,
	plugins/trash/Makefile.in, po/fr.gmo, po/fr.po,
	settings/Makefile.in, themes/Makefile.in,