@@ -1,3 +1,13 @@
+2003-01-27 23:00  huysmans
+
+	* ChangeLog, configure, panel/controls.c, panel/controls.h,
+	panel/global.h, panel/groups.c, panel/groups.h, panel/handle.c,
+	panel/handle.h, panel/mcs_client.c, panel/panel.c, panel/panel.h,
+	panel/popup.c, panel/popup.h, plugins/switcher/switcher.c,
+	plugins/systembuttons/systembuttons.c, settings/xfce_settings.h,
+	settings/xfce_settings_dialog.c, settings/xfce_settings_plugin.c:
+	Remove old style and switcher minibuttons
+
 2003-01-26 19:33  huysmans
 
 	* configure.ac, po/fi.gmo, po/fi.po: Add Finnish translations
